--- a/src/spotify_ml.ipynb
+++ b/src/spotify_ml.ipynb
@@ -7,7 +7,7 @@
         "id": "1ffbf85e-3a19-4d02-aaa4-7fa1285c341b"
       },
       "source": [
-        "# Data Visualization and Preprocessing"
+        "# Data Visualization, Preprocessing and Model Training"
       ]
     },
     {
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "419bf060-adc9-4160-be6e-1ea660c60f43",
       "metadata": {
         "id": "419bf060-adc9-4160-be6e-1ea660c60f43"
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "837e7ba3-fd83-40a2-86e4-85b31031b1d2",
       "metadata": {
         "colab": {
@@ -520,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "4c3678b1-3687-410a-b04e-36431e01ef7b",
       "metadata": {
         "colab": {
@@ -977,7 +977,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "0ca0fbc6-0f22-4968-ba3c-22aea37f1a36",
       "metadata": {
         "colab": {
@@ -1020,7 +1020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "ddaae466-233b-4405-be01-edea59f70f96",
       "metadata": {
         "colab": {
@@ -1081,7 +1081,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "2007dbea-96a3-44d6-b611-131546722ae5",
       "metadata": {
         "colab": {
@@ -1537,7 +1537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "32f00442-c209-4252-871a-9575af4426a1",
       "metadata": {
         "colab": {
@@ -2255,7 +2255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "593c9759-300f-48a3-a1c0-3408925accbc",
       "metadata": {
         "colab": {
@@ -2291,7 +2291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "eb2ace0b-c7ac-423b-aaa3-ced6f5d8d2f8",
       "metadata": {
         "colab": {
@@ -2494,7 +2494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "0293a7eb-98d3-4759-8ce2-ee4831f6b8fe",
       "metadata": {
         "colab": {
@@ -2545,7 +2545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "f909417e-27e1-4df7-aa0d-a379556432e0",
       "metadata": {
         "id": "f909417e-27e1-4df7-aa0d-a379556432e0"
@@ -2576,7 +2576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "b50cb8c0-6a0e-47f9-a05f-71c79aa6a099",
       "metadata": {
         "colab": {
@@ -2636,7 +2636,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "d7e92bd4-280e-41e0-9863-dbe0f08522d5",
       "metadata": {
         "colab": {
@@ -2685,7 +2685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "fc3a99de-d296-4d0b-81fc-27b11bb42567",
       "metadata": {
         "id": "fc3a99de-d296-4d0b-81fc-27b11bb42567"
@@ -2723,7 +2723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "ae42a88f-8a19-4682-bd12-234be6b4ad01",
       "metadata": {
         "colab": {
@@ -2769,7 +2769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "5aefb64a-b7a7-4ead-bd7f-5f0dc21c1660",
       "metadata": {
         "colab": {
@@ -2841,7 +2841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "21e54892-50bd-4c78-b22c-e6d1ee948a70",
       "metadata": {
         "colab": {
@@ -2904,7 +2904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "84b16165-1056-4014-a0bc-97e12bc1a17b",
       "metadata": {
         "colab": {
