--- a/src/spotify_ml.ipynb
+++ b/src/spotify_ml.ipynb
@@ -504,7 +504,7 @@
         }
       ],
       "source": [
-        "high_df = pd.read_csv(\"/home/high_popularity_spotify_data.csv\")\n",
+        "high_df = pd.read_csv(\"../data/high_popularity_spotify_data.csv\")\n",
         "high_df.head()"
       ]
     },
@@ -961,7 +961,7 @@
         }
       ],
       "source": [
-        "low_df = pd.read_csv(\"/home/low_popularity_spotify_data.csv\")\n",
+        "low_df = pd.read_csv(\"../data/low_popularity_spotify_data.csv\")\n",
         "low_df.head()"
       ]
     },
@@ -2900,74 +2900,6 @@
       },
       "source": [
         "### Check Feature Importance"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import GridSearchCV\n",
-        "\n",
-        "param_grid = {\n",
-        "    'n_estimators': [300, 500],\n",
-        "    'max_depth': [10, 20, None],\n",
-        "    'min_samples_split': [2, 5],\n",
-        "    'min_samples_leaf': [1, 2, 4],\n",
-        "    'max_features': ['sqrt', 'log2'],\n",
-        "    'bootstrap': [True, False]\n",
-        "}\n",
-        "\n",
-        "grid_search = GridSearchCV(\n",
-        "    estimator=RandomForestClassifier(class_weight='balanced', random_state=42),\n",
-        "    param_grid=param_grid,\n",
-        "    scoring='f1',\n",
-        "    cv=3,\n",
-        "    verbose=2,\n",
-        "    n_jobs=-1\n",
-        ")\n",
-        "\n",
-        "grid_search.fit(X_train_scaled, y_train)\n",
-        "\n",
-        "print(\"Best Parameters:\", grid_search.best_params_)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8Wey7cBMfQ8t",
-        "outputId": "18105f2c-0552-4946-8915-279a9f23574c"
-      },
-      "id": "8Wey7cBMfQ8t",
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fitting 3 folds for each of 144 candidates, totalling 432 fits\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_search.py:1108: UserWarning: One or more of the test scores are non-finite: [nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-            " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-            " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-            " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-            " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-            " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-            " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-            " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan]\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Best Parameters: {'bootstrap': True, 'max_depth': 10, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 300}\n"
-          ]
-        }
       ]
     },
     {
