Separate assets and fix structure

--- a/src/spotify_ml.ipynb
+++ b/src/spotify_ml.ipynb
@@ -2392,7 +2392,7 @@
         "\n",
         "    # Save the encoder\n",
         "    label_encoders[feature] = le\n",
-        "    joblib.dump(le, f'{feature}_encoder.pkl')\n",
+        "    joblib.dump(le, f'../assets/encoders/{feature}_encoder.pkl')\n",
         "\n",
         "# Parse album year from release date\n",
         "def parse_date(val):\n",
@@ -2700,7 +2700,7 @@
         "X_test_scaled = scaler.transform(X_test)\n",
         "\n",
         "# Save the fitted scaler\n",
-        "joblib.dump(scaler, 'scaler.pkl')\n",
+        "joblib.dump(scaler, '../assets/scalers/standard_scaler.pkl')\n",
         "\n",
         "# Find and filter anomalies using IsolationForest\n",
         "iso = IsolationForest(contamination=0.01, random_state=42)\n",
@@ -2889,7 +2889,7 @@
         "print(classification_report(y_test, y_pred))\n",
         "\n",
         "# Save model as .pkl file with joblib\n",
-        "joblib.dump(model, 'popularity_predictor.pkl')"
+        "joblib.dump(model, '../assets/models/random_forest.pkl')"
       ]
     },
     {
